# tese-dataflow-cache

./: .gitignore  CITATION.cff  Makefile  README.md  dockerfile
cenarios/cenario_od_covid/: pyproject.toml
cenarios/cenario_od_covid/covid_pipelines/: main.py  pipeline.py  spark_conf.py
datafrag-manager/: pyproject.toml
datafrag-manager/datafrag_manager/: __init__.py  datafrag_manager.py  utils.py
datafrag-manager/tests/: test_datafrag_manager.py
datafrag-manager/warehouse_frags/agg_covid_test/: .part-00000-61b79830-a110-4050-944c-099e15e84f25-c000.snappy.parquet.crc  .part-00001-2452ab56-53c4-42dc-91be-6d15a3e911d7-c000.snappy.parquet.crc  .part-00002-3c133aca-80a2-44e0-b9c6-a115269f15cb-c000.snappy.parquet.crc  .part-00006-de441bff-03a5-4c85-9fef-78dd586c62b3-c000.snappy.parquet.crc  .part-00008-50873cb6-f562-4164-9a12-e0e420004f4e-c000.snappy.parquet.crc  .part-00009-b0074762-0ad9-4a0e-b1fe-7c4a40e7752e-c000.snappy.parquet.crc  .part-00010-7a1ebd10-98cd-40f2-970e-db6342e3fc1f-c000.snappy.parquet.crc  .part-00012-83c216aa-b7c0-4661-8fce-f4aeb2deae41-c000.snappy.parquet.crc  .part-00013-9b011200-371c-411c-b77c-e6b54f06a0f6-c000.snappy.parquet.crc  .part-00014-12e515df-aa0d-4864-9b05-f93a36d11714-c000.snappy.parquet.crc  .part-00015-3b3f9062-28a6-463b-8568-878804838f5b-c000.snappy.parquet.crc  .part-00016-533953f9-a1e4-4e69-813c-a07b665d740c-c000.snappy.parquet.crc  .part-00017-943b92f6-1c7c-42f4-bc73-0358580840e2-c000.snappy.parquet.crc  .part-00020-a00d0576-8bff-468f-96eb-345f66d5154d-c000.snappy.parquet.crc  .part-00021-8c650bc8-bf40-4d94-bbc3-414f78ded879-c000.snappy.parquet.crc  .part-00022-173cf8b4-57e5-46b3-97c9-221e2b9e9e4b-c000.snappy.parquet.crc  .part-00023-9ab3b032-899b-4002-807d-97d8a0b8e2fb-c000.snappy.parquet.crc  .part-00025-de730324-1f9b-4ba0-bc3f-de5ef0ceb5f9-c000.snappy.parquet.crc  .part-00026-c1634bd5-6748-4cf8-9281-83b8f67c0114-c000.snappy.parquet.crc  .part-00027-6b7c5f88-3db8-4532-b7c3-f5557ed4b38d-c000.snappy.parquet.crc  .part-00029-17e7000a-bf77-4130-b2b9-8b812ba3b224-c000.snappy.parquet.crc  .part-00030-e9be33a5-0d7c-48ef-845e-7f007431edf3-c000.snappy.parquet.crc  .part-00031-0a9fc0be-24f7-49db-879c-7377a8f97cc2-c000.snappy.parquet.crc  .part-00032-eac99cd8-8a6f-4ed5-a92f-a43b4010dba9-c000.snappy.parquet.crc  .part-00034-a3bd9282-6c6e-45fe-811e-143390990b55-c000.snappy.parquet.crc  .part-00038-68ac4b77-94e2-4067-a5f7-e52085f05a81-c000.snappy.parquet.crc  .part-00040-f0e23ddb-962f-4a53-8af9-61d2d53c7295-c000.snappy.parquet.crc  .part-00042-d2602c88-e4d6-45b5-967f-29391cd77e68-c000.snappy.parquet.crc  .part-00044-ecdc503a-50f5-44a8-982e-f735d386e29c-c000.snappy.parquet.crc  .part-00045-8a2df430-8a56-4d9e-b9df-5803364def96-c000.snappy.parquet.crc  .part-00046-2109fc4e-a918-432e-a99a-fc38b8d5ad6b-c000.snappy.parquet.crc  (+223 more)
(+51 files in other folders)
