[tool.poetry]
name = "datafrag_manager"
version = "0.0.1"
description = "Data Fragments Manager in dataflows spark"
authors = ["Gustavo Decarlo <gustavodecarlo@gmail.com>"]

[tool.poetry.dependencies]
pyarrow = "^4.0.0"
pyspark = "=3.1.2"
python = "^3.9"

[tool.poetry.dev-dependencies]
pylint = "^2.8.2"
pytest = "^6.2.4"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"