[tool.poetry]
name = "covid_pipelines"
version = "0.0.3"
description = "Cenario pipelines dados da covid"
authors = ["Gustavo Decarlo <gustavodecarlo@gmail.com>"]

[tool.poetry.dependencies]
pyspark = "^3.3.2"
python = "^3.9"
typer = "^0.4.0"
datafrag-manager = {path = "../../datafrag-manager", develop = true}


[tool.poetry.dev-dependencies]
pylint = "^2.8.2"
pytest = "^6.2.4"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"